--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,9 +1,22 @@
-.container-min-w-h{
+.container-min-w-h {
+    position: relative;
     margin-top: 4rem;
     width: 1200px;
     height: 700px;
-    background-color: rgba(210, 210, 210, 0.5);
     border-radius: 10px;
-    box-shadow: 0px 5px 5px 3px #313131 ;
     padding: 25px;
+    overflow-x: hidden;
+
+    background-color: rgba(210, 210, 210, 0.5);
+    box-shadow: 0px 5px 5px 3px #313131;
+}
+
+.hidden-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+.image-style{
+    position: relative;
+    width: 120px;
+    height: 80px;
 }
