--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,9 +1,23 @@
-.container-min-w-h{
+.container-min-w-h {
+    position: relative;
     margin-top: 4rem;
     width: 1200px;
     height: 700px;
-    background-color: rgba(210, 210, 210, 0.5);
     border-radius: 10px;
-    box-shadow: 0px 5px 5px 3px #313131 ;
     padding: 25px;
+    overflow-x: hidden;
+
+    background-color: rgba(210, 210, 210, 0.5);
+    box-shadow: 0px 5px 5px 3px #313131;
+}
+
+.hidden-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+.table-scroller {
+    position: relative;
+    margin-top: 1rem;
+    border-radius: 10px;
+    overflow-x: hidden;
 }
